# flex_array

./: Cargo.toml  LICENSE  README.md  other.txt  rustfmt.toml
src/: alloc.rs  flex_array.rs  lib.rs  types.rs
src/alloc/: alloc_api2.rs  alloc_unstable.rs  alt_alloc.rs  std_alloc.rs
src/flex_array/: array.rs  inner.rs  tests.rs
src/types/: alt_alloc.rs  errors.rs  len_type.rs  std_alloc.rs
